--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <form id="contactForm" action="https://formsubmit.co/0b7d4bd5170917f990ec031df7a590bb" method="POST">
             <!-- Hidden fields for FormSubmit -->
             <input type="hidden" name="_captcha" value="true">
-            <input type="hidden" name="_next" value="F:\1. RUET\3-1\CSE 3100\portfolio\thanks.html">
+            <input type="hidden" name="_next" value="https://ashik082.github.io/my-portfolio/thanks.html">
             <input type="hidden" name="_template" value="table">
             
             <div class="input-group">
