Update project name

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="project-card">
                 <img src="project1.png" alt="">
 
-                <h3>FOOD KHOR – Food Delivery App </h3>
+                <h3>FOOD ANYTIME – Food Delivery App </h3>
 
                 <p>A full-stack food delivery platform with Firebase-powered
                      authentication, real-time order tracking, and dynamic menu management. 
@@ -163,7 +163,9 @@
                     <p>• Real-time database to track orders and update status.</p>
                     <p>• Interactive UI with cart functionality and payment integration.</p></i>
                    <p>(Tech: Flutter,Firebase)</p>
-                <div class="btn">Review Project</div>
+                   <a href="https://github.com/ashik082/Food-Anytime" target="_blank">
+                    <div class="btn">Review Project</div>
+                  </a>
             </div>
             <div class="project-card">
                 <img src="project1.png" alt="">
