--- a/index.html
+++ b/index.html
@@ -170,18 +170,18 @@
             <div class="project-card">
                 <img src="project1.png" alt="">
 
-                <h3>TASKFLOW – Productivity Management Tool</h3>
+                <h3>BOOKVERSE – Smart AI Book Suggestion Platform</h3>
 
-                <p>A minimalist task manager built to boost productivity 
-                    with drag-and-drop functionality and deadline reminders. 
-                    The app prioritizes simplicity and speed, offering:</p> 
+                <p>An intelligent book discovery website designed to help readers find their next favorite book with AI-powered recommendations. BookVerse blends curated collections with personalized suggestions.</p> 
                     
 
                     <i><p><b> Highlights:</b></p>
-                        <p>• Local storage for offline access.</p>
-                    <p>• Priority tagging and progress tracking.</p>
-                    <p>• Clean, responsive design for cross-device use.</p></i>
-                   <p>(Tech: JavaScript, React, CSS Modules)</p>
+                        <p>• AI-driven book suggestions (Gemini API).</p>
+                    <p>• Book browsing, favorites, cart, and orders.</p>
+                    <p>• User authentication with JWT.</p>
+                <p>• Modern responsive design for all devices.</p>
+            <p>• MongoDB-powered backend with real-time data handling.</p></i>
+                   <p>(Tech: Node.js, Express, MongoDB, React, Tailwind CSS)</p>
                 <div class="btn">Review Project</div>
             </div>
 
