--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
                 <p>• Modern responsive design for all devices.</p>
             <p>• MongoDB-powered backend with real-time data handling.</p></i>
                    <p>(Tech: Node.js, Express, MongoDB, React, Tailwind CSS)</p>
-                <div class="btn">Review Project</div>
-            </div>
+                <a href="https://luminous-phoenix-9107fa.netlify.app/" target="_blank">
+                    <div class="btn">Review Project</div>
+                  </a>
 
             <div class="project-card">
                 <img src="project1.png" alt="">
