updated project links

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <p>• MongoDB-powered backend with real-time data handling.</p>
                 </i>
                 <p>(Tech: Node.js, Express, MongoDB, React, Tailwind CSS)</p>
-                <a href="https://luminous-phoenix-9107fa.netlify.app/" target="_blank">
+                <a href="https://github.com/ashik082/BookVerse" target="_blank">
                     <div class="btn">Review Project</div>
                 </a>
             </div>
@@ -216,8 +216,10 @@
                     <p>• Dynamic UI with animated weather icons.</p>
                     <p>• Light/dark mode for user preference.</p>
                 </i>
-                <p>(Tech: HTML/CSS, JavaScript, REST API)</p>
-                <div class="btn">Review Project</div>
+                <p>(Tech: HTML, CSS, JavaScript)</p>
+                <a href="https://github.com/ashik082/weatherly" target="_blank">
+                    <div class="btn">Review Project</div>
+                </a>
             </div>
 
         </div>
