Updated portfolio layout, styles and added file

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
                 You’ll find me nurturing plants in my small garden.
                 I also unwind by watching movies and WWE. Balancing tech with these
                 passions keeps me grounded and fuels my curiosity</p>
-            <a href="https://docs.google.com/document/d/1P_lAL0PSD5S3a42_LmqLhJcTsIR4cuegSJIq36A3b5s/edit?usp=sharing"
-                class="btn">Read More</a>
+            <div class="btn-group">
+                <a href="readmore.html" class="btn">Read More</a>
+                <a href="https://drive.google.com/file/d/1A74m21gkbnPSypm1leSVH8K1eJvyjU5w/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn">View My Resume</a>
+            </div>
         </div>
     </section>
 
